--- a/API/package.json
+++ b/API/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
+    "express": "^4.17.1",
+    "module": "^1.2.5",
     "uuid": "^3.3.2"
   }
 }
